--- a/PeterworksDevTool/wwwroot/index.html
+++ b/PeterworksDevTool/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="PeterworksDevTool.styles.css" rel="stylesheet" />
 </head>
